src/objects/Expense__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Billable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Billable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Client__c</fullName>
        <label>Client</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comment__c</fullName>
        <label>Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expense_date__c</fullName>
        <label>Expense date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Reimbursed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reimbursed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unit_count__c</fullName>
        <label>Unit count</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unit_rate__c</fullName>
        <label>Unit rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Unit_unit__c</fullName>
        <label>Unit unit</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Expense</label>
    <nameField>
        <label>Expense Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Expenses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>